adding comment demo html

--- a/demo.html
+++ b/demo.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--Tribute page for Stephen Hawking-->
 <html lang="">
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
